style changes to standardize rubric views

--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -18,7 +18,7 @@
   -webkit-appearance: none
 
   &:hover
-    background-color: darken($color-blue-3, 10%) !important
+    background-color: darken($color-blue-3, 10%)
     color: $color-white
     text-decoration: none
 
