--- a/app/views/rubrics/components/_level.haml
+++ b/app/views/rubrics/components/_level.haml
@@ -1,4 +1,4 @@
-%td.level.level-level{:class => ("meets-expectations" if level.meets_expectations?)}
+%td.level.level-level{:class => ("meets-expectations" if level.meets_expectations || level.above_expectations?)}
   = render "rubrics/components/level_heading", level: level
   = render "rubrics/components/level_badges", level: level
 
