default to grey without expectation set

--- a/app/assets/stylesheets/_rubrics.sass
+++ b/app/assets/stylesheets/_rubrics.sass
@@ -11,6 +11,7 @@ $below-expectations-color: $color-grey-5
 $below-expectations-selected-color: $color-grey-4
 $meets-expectations-color: $color-green-2
 $meets-expectations-selected-color: $color-green-1
+$no-expectation-color: $color-grey-8
 
 #rubric
   textarea
@@ -196,6 +197,9 @@ button.meets-expectations-status.show
 
 button.meets-expectations-toggle.remove
   background-color: $color-grey-8
+
+button.meets-expectations-status.no-expectation
+  background-color: $no-expectation-color
 
 .level
   background: $color-grey-5
