--- a/app/views/rubrics/_new_level.html.haml
+++ b/app/views/rubrics/_new_level.html.haml
@@ -23,7 +23,7 @@
     %button.close-modal(ng-click="level.closeBadges()") Update Badges
 
 
-%button.meets-expectations-status(type="button" ng-class="{'show': level.showExpectationStatus()}") {{level.label()[0]}}
+%button.meets-expectations-status(type="button" ng-class="{'no-expectation': !level.meetExpectationSet(),'show': level.meetsExpectations || level.showExpectationStatus()}") {{level.label()[0]}}
 %button.meets-expectations-toggle(type="button" ng-class="{'remove': level.meetsExpectations}" ng-click="level.toggleMeetsExpectations()") {{level.label()[1]}}
 %button.delete(type="button" ng-click="level.delete($index)" ng-hide="level.required") X
 
