store and update meets_expectations on criterion

--- a/app/views/assignments/_show_instructor.haml
+++ b/app/views/assignments/_show_instructor.haml
@@ -13,7 +13,7 @@
       %li
         %a{ "href" => "#tab"} Grades
       %li
-        %a{ "href" => "#tabt2"} Description & Downloads
+        %a{ "href" => "#tabt2"} Description &amp; Downloads
       - if presenter.grade_with_rubric?
         %li
           %a{ "href" => "#tabt3"} Grading Rubric
