--- a/app/views/submissions/components/_files.haml
+++ b/app/views/submissions/components/_files.haml
@@ -4,4 +4,4 @@
     - presenter.submission.submission_files.each_with_index do |submission_file, index|
       %li
         = external_link_to submission_file.instructor_filename(index),
-          submission_file.url
+          download_submission_file_path(submission_file)
