--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -93,12 +93,9 @@ a.site-title
   list-style-type: none
 
 .btn-navbar-left
-  position: absolute
-  top: 7px
   font-size: 1.1rem
-  width: 35px
-  height: 40px
-  padding: 4px 0
+  text-align: left
+  padding: .75em
   display: block
   z-index: 1
   color: $color-green-2
@@ -106,18 +103,12 @@ a.site-title
     color: $color-green-2
     text-decoration: none
 
-.btn-navbar-right
-  right: 0
-
-.btn-navbar-left
-  left: 0
-
 /* Navbar Styles */
 .navbar
   position: fixed
   top: 0 !important
   z-index: 1000
-  height: 45px !important
+  // height: 45px !important
   background-color: $color-blue-1
 
 ul.subnav.logged-out
@@ -177,9 +168,6 @@ ul.subnav.logged-out
     content: ""
     display: table
     clear: both
-  .the-nav .nav-pill.left
-    height: 45px
-    overflow: hidden
   .the-nav .nav-pill.right
     z-index: 100
   .the-nav > .nav
@@ -198,7 +186,7 @@ ul.subnav.logged-out
     border-bottom-color: $color-grey-8
   .the-nav > .nav > li a
     display: block
-    padding: .5rem
+    padding: .75rem .5rem
     color: $color-blue-4
     text-decoration: none
     .course_name
@@ -212,8 +200,6 @@ ul.subnav.logged-out
       margin-left: .5rem
       color: $color-green-2
 
-  .logged-in .the-nav > .nav > li a
-    padding-top: .85rem
 
   /* Active State */
   .the-nav > .nav > li:hover > a
@@ -336,11 +322,9 @@ ul.subnav.logged-out
       padding: .5rem .75rem
       font-size: 1rem
 
-  .navbar .mobile-nav
-    padding-top: .5rem
-    padding-left: .5rem
-    margin: 0 auto
-    text-align: center
+  // .navbar .mobile-nav
+  //   margin: 0 auto
+  //   text-align: center
 
     .nav.nav-pill
       width: 100% !important
@@ -379,6 +363,7 @@ ul.subnav.logged-out
   & > li
     list-style: none
     padding: .25em 0em
+    color: $color-grey-3
     & > a
       padding: 0em
 
