--- a/app/views/submissions/components/_files.haml
+++ b/app/views/submissions/components/_files.haml
@@ -3,5 +3,10 @@
   %ul
     - presenter.submission.submission_files.each_with_index do |submission_file, index|
       %li
-        = external_link_to submission_file.instructor_filename(index),
-          download_submission_file_path(submission_file)
+        - if submission_file.file_missing
+          -# if the file is missing don't print a link
+          = "(missing) #{submission_file.instructor_filename(index)}"
+        - else
+          -# otherwise give us a link to download the file through the server
+          = external_link_to submission_file.instructor_filename(index),
+            download_submission_file_path(submission_file)
