add index values to submission files on individual download

--- a/app/views/submissions/components/_files.haml
+++ b/app/views/submissions/components/_files.haml
@@ -9,4 +9,4 @@
         - else
           -# otherwise give us a link to download the file through the server
           = external_link_to submission_file.instructor_filename(index),
-            download_submission_file_path(submission_file)
+            download_submission_file_path(submission_file, index: index)
