add a broken chain link for missing files

--- a/app/views/submissions/components/_files.haml
+++ b/app/views/submissions/components/_files.haml
@@ -5,6 +5,7 @@
       %li
         - if submission_file.file_missing
           -# if the file is missing don't print a link
+          %i.fa.fa-chain-broken.fa-fw
           = "(missing) #{submission_file.instructor_filename(index)}"
         - else
           -# otherwise give us a link to download the file through the server
