--- a/app/assets/stylesheets/_predictor.sass
+++ b/app/assets/stylesheets/_predictor.sass
@@ -261,6 +261,7 @@ article.predictor-article
 
 .predictor-article-main
   padding-top: 8px
+  margin-top: -7px
 
 article.predictor-article.status-late
   background-color: $color-yellow-1
@@ -319,6 +320,13 @@ article.predictor-article.status-graded.status-no-points
   text-align: center
   font-size: $predictor-font-size-2
   color: $color-blue-2
+
+.article-graded.excluded
+  .grade
+    color: $color-red-1
+  .excluded
+    color: $color-red-1
+    text-align: center
 
 .badge-complete .value
   padding-top: 30px
