--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -93,9 +93,12 @@ a.site-title
   list-style-type: none
 
 .btn-navbar-left
+  position: absolute
+  top: 7px
   font-size: 1.1rem
-  text-align: left
-  padding: .75em
+  width: 35px
+  height: 40px
+  padding: 4px 0
   display: block
   z-index: 1
   color: $color-green-2
@@ -103,12 +106,15 @@ a.site-title
     color: $color-green-2
     text-decoration: none
 
+.btn-navbar-left
+  left: 0
+
 /* Navbar Styles */
 .navbar
   position: fixed
   top: 0 !important
   z-index: 1000
-  // height: 45px !important
+  height: 45px !important
   background-color: $color-blue-1
 
 ul.subnav.logged-out
@@ -168,6 +174,9 @@ ul.subnav.logged-out
     content: ""
     display: table
     clear: both
+  .the-nav .nav-pill.left
+    height: 45px
+    overflow: hidden
   .the-nav .nav-pill.right
     z-index: 100
   .the-nav > .nav
@@ -184,9 +193,9 @@ ul.subnav.logged-out
     margin-left: 2px
     border-top-color: $color-grey-8
     border-bottom-color: $color-grey-8
-  .the-nav > .nav > li a
+  .nav > li a
     display: block
-    padding: .75rem .5rem
+    padding: .5rem
     color: $color-blue-4
     text-decoration: none
     .course_name
@@ -200,6 +209,9 @@ ul.subnav.logged-out
       margin-left: .5rem
       color: $color-green-2
 
+  .logged-in .the-nav > .nav > li a
+    padding-top: .85rem
+    padding-bottom: .75rem
 
   /* Active State */
   .the-nav > .nav > li:hover > a
@@ -322,9 +334,11 @@ ul.subnav.logged-out
       padding: .5rem .75rem
       font-size: 1rem
 
-  // .navbar .mobile-nav
-  //   margin: 0 auto
-  //   text-align: center
+  .navbar .mobile-nav
+    padding-top: .5rem
+    padding-left: .5rem
+    margin: 0 auto
+    text-align: center
 
     .nav.nav-pill
       width: 100% !important
@@ -344,7 +358,7 @@ ul.subnav.logged-out
 .noscroll
   overflow: hidden
 
-#course-info-btn
+.course-info-btn
   text-decoration: none
   position: relative
   color: $color-blue-4
@@ -364,8 +378,9 @@ ul.subnav.logged-out
     list-style: none
     padding: .25em 0em
     color: $color-grey-3
-    & > a
+    .logged-in .the-nav > .nav & > a
       padding: 0em
+      color: $color-blue-3
 
 .course-info-card:after, 
 .course-info-card:before
