--- a/app/views/layouts/_top_bar.haml
+++ b/app/views/layouts/_top_bar.haml
@@ -37,8 +37,8 @@
                 %span.course_name= "#{current_course.name} "
                 %span.course_semester= "#{current_course.try(:semester)} #{current_course.try(:year)}"
           %ul.nav.nav-pill.right
-            %li.section-title#course-info-btn
-              = link_to glyph('info-circle hidden-sm') + "Class Info", "#", title: "Quick information about #{current_course.name}" 
+            %li.course-info-btn
+              = link_to glyph('info-circle hidden-sm') + "Class Info", "#", title: "Quick information about #{current_course.name}", class: "section-title"
               %ul.course-info-card= render "layouts/navigation/class_info"
             = render "layouts/navigation/authenticated_nav"
         %nav.mobile-nav.hide-for-large
