changed max-width to pixel value to prevent strange styling on large desktop displays and removed styling to center badges

--- a/app/assets/stylesheets/_badges.sass
+++ b/app/assets/stylesheets/_badges.sass
@@ -9,25 +9,19 @@
   width: 80%
   max-width: 100px
 
-.student-badge-display
-  text-align: center
-  h4
-    text-align: left
-
 /* used on the badge show page for both instructors and students, and grade
 /* standard edit form */
 .badge-card
   position: relative
   min-height: 8%
   max-height: 7.85rem
-  max-width: 30%
+  max-width: 280px
   min-width: 17.5rem
   background-color: $color-blue-3
   border-radius: $global-radius
   padding: .5rem
   display: inline-block
   margin: 0 .25rem .25rem 0
-  text-align: left
 
   &.available
     background-color: $color-blue-2
