added min-width to my-account list item

--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -183,6 +183,8 @@ ul.subnav.logged-out
     margin: 0
     padding-left: 0
     line-height: normal
+    .my-account
+      min-width: 120px
   .the-nav > .nav > li
     display: inline-block
     margin-bottom: 0
