--- a/app/views/layouts/navigation/_authenticated_nav.haml
+++ b/app/views/layouts/navigation/_authenticated_nav.haml
@@ -4,7 +4,7 @@
     %i.fa.fa-caret-down.hidden-sm
   %ul.subnav#course-list
     = render "layouts/navigation/course_list"
-%li.dropdown       
+%li.dropdown.my-account       
   %a.section-title{:href => "#", :title => "My account management"} 
     - if current_user.avatar_file_name.present?
       %img.profile-pic{:src => current_user.avatar_file_name, :height => 20}
