Move assignment#criterion_grades_review to assignments/grades#index

--- a/app/views/assignments/_buttons.html.haml
+++ b/app/views/assignments/_buttons.html.haml
@@ -38,7 +38,7 @@
       - if presenter.grade_with_rubric?
         - if presenter.has_reviewable_grades?
           %li
-            %a{:href => criterion_grades_review_assignment_path(presenter.assignment) }
+            %a{href: assignment_grades_path(presenter.assignment) }
               Review Grades
         %li.on(ng-cloak ng-show="useRubric")
           %a(ng-click="rubricsOff()")
