--- a/app/views/assignments/grades/index.html.haml
+++ b/app/views/assignments/grades/index.html.haml
@@ -2,14 +2,14 @@
 
 %h3.pagetitle= "#{presenter.assignment.name} Review Rubric Grades (#{ points presenter.assignment.point_total } points)"
 
-= render partial: "buttons", locals: { presenter: presenter }
+= render partial: "assignments/buttons", locals: { presenter: presenter }
 
 .pageContent
   = render "layouts/alerts"
 
   - if presenter.has_teams? && presenter.assignment.is_individual?
     .team-filter
-      = form_tag criterion_grades_review_assignment_path(presenter.assignment), name: "see_team", :onchange => ("javascript: document.see_team.submit();"), :method => :get do
+      = form_tag assignment_grades_path(presenter.assignment), name: "see_team", :onchange => ("javascript: document.see_team.submit();"), :method => :get do
         %label.sr-only{:for => "team_id"}
           Select #{term_for :team}
         = select_tag :team_id, options_for_select(presenter.teams.map { |t| [t.name, t.id] }, presenter.team.try(:id)), :prompt => "– Select #{(term_for :team).titleize} –"
