--- a/app/assets/stylesheets/_rubrics.sass
+++ b/app/assets/stylesheets/_rubrics.sass
@@ -175,7 +175,7 @@ button.delete
   width: 24px
   height: 24px
   &:hover
-    background-color: $color-orange-1 !important
+    background-color: $color-orange-1
 
 button.meets-expectations-status, button.meets-expectations-toggle
   font-weight: bold
