--- a/app/views/grades/components/_request_feedback.html.haml
+++ b/app/views/grades/components/_request_feedback.html.haml
@@ -1,6 +1,5 @@
 - unless grade.feedback_read?
   %p
   .right
-    = simple_form_for assignment, url: feedback_read_grades_assignment_path(assignment), method: :post do |f|
-      = hidden_field_tag :grade_id, grade.id
+    = simple_form_for assignment, url: feedback_read_grade_path(grade), method: :post do |f|
       = f.submit "I have read this feedback", class: "button"
