use current_student for badge show and index

--- a/app/views/badges/index.html.haml
+++ b/app/views/badges/index.html.haml
@@ -1,13 +1,13 @@
-= content_nav_for Badge if !@student
+= content_nav_for Badge if !current_student
 
 %h3.pagetitle= @title
 
-= render partial: "badges/context_menu", locals: {actions: [:new]} if current_user_is_staff? && !@student
+= render partial: "badges/context_menu", locals: {actions: [:new]} if current_user_is_staff? && !current_student
 
 .pageContent
   = render "layouts/alerts"
 
-  %table.badge-index-table{:class => ("student-index" if @student)}
+  %table.badge-index-table{:class => ("student-index" if current_student)}
     %thead
       %tr
         %th.sort-column
@@ -17,11 +17,11 @@
         %th.description-column Description
         %th.button-column
 
-    %tbody{:class => ("sort-badges" if !@student)}
+    %tbody{:class => ("sort-badges" if !current_student)}
       - @badges.each do |badge|
-        - if BadgeProctor.new(badge).viewable?(@student || current_user)
+        - if BadgeProctor.new(badge).viewable?(current_student || current_user)
           %tr{id: "badge-#{badge.id}"}
-            - if !@student
+            - if !current_student
               %td.center
                 %i.fa.fa-arrows-v.draggable
             - else
@@ -36,7 +36,7 @@
               = render partial: "badges/components/icon", locals: { badge: badge }
 
             %td
-              - if @student
+              - if current_student
                 = render partial: "badges/components/count", locals: { badge: badge, count: @earned_badge_count[badge.id] }
               - else
                 = render partial: "badges/components/count", locals: { badge: badge, count: badge.awarded_count }
@@ -47,5 +47,5 @@
 
             // Buttons
             %td
-              - if !@student
+              - if !current_student
                 = render partial: "badges/buttons", locals: { badge: badge }
