--- a/app/views/badges/show.html.haml
+++ b/app/views/badges/show.html.haml
@@ -36,7 +36,7 @@
               = link_to "(Remove)", remove_uploads_path({ :model => "BadgeFile", :upload_id => bf.id } )
   .clear
 
-  - if current_user_is_staff? && ! presenter.student
+  - if current_user_is_staff? && ! presenter.view_student_context?
     = render partial: "badges/all_students_earned_badges_table", locals: { presenter: presenter }
   - else
     = render partial: "badges/student_earned_badges", locals: { presenter: presenter }
