--- a/app/views/assignments/_show_student.haml
+++ b/app/views/assignments/_show_student.haml
@@ -34,7 +34,7 @@
       - if presenter.has_submission_for?(current_student)
         #tab3
           = render "submissions/submission_content",
-              presenter: ShowSubmissionPresenter.new(id: presenter.submission_for_assignment(current_student).id,
+              presenter: Submissions::ShowPresenter.new(id: presenter.submission_for_assignment(current_student).id,
                 assignment_id: presenter.assignment.id, course: current_course)
         #history
           = history_timeline presenter.submission_grade_history(current_student)
