Update the show2 to display the students in group and the edit button content with just the grade

--- a/app/views/grades/_grade_content.haml
+++ b/app/views/grades/_grade_content.haml
@@ -6,7 +6,7 @@
 
   = render "grades/components/excluded", grade: grade if grade.excluded_from_course_score?
 
-  = render "grades/components/students_in_group", grade: grade, presenter: presenter if grade.assignment.has_groups?
+  = render "grades/components/students_in_group", grade: grade if grade.assignment.has_groups?
 
   = render "grades/components/threshold", grade: grade if grade.assignment.threshold_points
 
