--- a/app/views/grades/components/_students_in_group.haml
+++ b/app/views/grades/components/_students_in_group.haml
@@ -1,7 +1,7 @@
 %p
-  .bold= "#{ term_for :students } in #{ term_for :group } #{ presenter.group_for(current_student).name }:"
+  .bold= "#{term_for :students} in #{term_for :group} #{grade.group.name}:"
   %ul
-    - presenter.group_for(current_student).students.each do |student|
+    - grade.group.students.each do |student|
       - if current_user_is_student?
         %li= student.name
       - else
