--- a/app/views/rubrics/components/_rubric_table.haml
+++ b/app/views/rubrics/components/_rubric_table.haml
@@ -1,3 +1,4 @@
+= link_to glyph("file-excel-o") + "Download Rubric", export_assignment_rubric_path(presenter.assignment.id, format: :csv)
 %table#rubric-table
   %thead
     %tr
