--- a/app/views/assignments/_form.haml
+++ b/app/views/assignments/_form.haml
@@ -70,6 +70,12 @@
       = f.text_area :description, class: "froala"
 
   %section
+    %h4 Assignment Purpose
+    .textarea
+      .form_label This will be shown to students on their dashboard, and when they submit their assignment.
+      = f.text_area :purpose, class: "froala"
+
+  %section
     %h4= "Advanced Settings"
 
     .form-item
@@ -172,6 +178,10 @@
         .checkbox
           = f.label :show_description_when_locked, :label => "Show Description when Locked"
           = f.check_box :show_description_when_locked
+      %li.locked-display
+        .checkbox
+          = f.label :show_purpose_when_locked, :label => "Show Purpose when Locked"
+          = f.check_box :show_purpose_when_locked
 
     .unlock-conditions
       %p.hint Unlocks allow you to direct the sequence of content in your course. What do students need to do in order to unlock this assignment?
