--- a/app/views/rubrics/components/_criteria.haml
+++ b/app/views/rubrics/components/_criteria.haml
@@ -7,7 +7,7 @@
       .criterion-description= criterion.wrapped_description(40).html_safe
 
     - criterion.levels.ordered.each do |level|
-      = render partial: "rubrics/components/level", locals: { level: level, include_grade_info: include_grade_info }
+      = render partial: "rubrics/components/level", locals: { level: level, student: student, include_grade_info: include_grade_info }
 
     - if criterion.levels.size < rubric.max_level_count
       %td.filler(colspan="#{rubric.max_level_count - criterion.levels.size}")
