--- a/app/views/rubrics/components/_level_grade_analysis.haml
+++ b/app/views/rubrics/components/_level_grade_analysis.haml
@@ -1,6 +1,6 @@
--if level.earned_for?(current_student.id)
+-if level.earned_for?(student.id)
   - if current_user_is_staff?
-    .earned_level #{current_student.first_name} earned this level
+    .earned_level #{student.first_name} earned this level
   - elsif current_user_is_student?
     .earned_level I earned this level
 
