--- a/app/views/rubrics/components/_rubric_table.haml
+++ b/app/views/rubrics/components/_rubric_table.haml
@@ -12,4 +12,4 @@
           Comments
 
   %tbody
-    = render partial: "rubrics/components/criteria", locals: { rubric: rubric, include_grade_info: include_grade_info }
+    = render partial: "rubrics/components/criteria", locals: { rubric: rubric, student: student, include_grade_info: include_grade_info }
