--- a/app/views/students/syllabus/components/_grade_buttons.haml
+++ b/app/views/students/syllabus/components/_grade_buttons.haml
@@ -1,5 +1,5 @@
 - if GradeProctor.new(presenter.grade_for(assignment)).viewable?
-  %li= link_to glyph(:eye) + "See Grade", assignment_grade_path(assignment, student_id: presenter.student.id, anchor: "tab4"), class: "button"
+  %li= link_to glyph(:eye) + "See Grade", grade_path(presenter.grade_for(assignment), anchor: "tab4"), class: "button"
   / Grade Management /
   - if current_user_is_staff?
     - if assignment.is_individual?
