change structure of haml on press page to reflect subnav in hero section

--- a/app/views/pages/press.html.haml
+++ b/app/views/pages/press.html.haml
@@ -1,12 +1,10 @@
 .page
 	.hero-section
 		%h1 Press & Awards
+		%ul.public-subnav= render "subnav"
 	.main-section
-		.one-third
-			%ul= render "subnav"
-		.two-thirds
-			.title.bold Awards
-			%ul= render "awards"
-			%br
-			.title.bold Press
-			%ul= render "articles"
+		.title.bold Awards
+		%ul= render "awards"
+		%br
+		.title.bold Press
+		%ul= render "articles"
