added section for content inside main section and changed width to 75 percent.

--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -13,7 +13,7 @@
       color: $color-white
       text-align: center
       font-size: 2.5rem
-      padding: 2em
+      padding: 2em 0
 
     .public-subnav 
       position: absolute
@@ -34,7 +34,7 @@
 
   .main-section
     background-color: $color-white
-    padding: 1rem 6rem
+    padding: 1rem
 
     ul
       padding-left: 0
@@ -48,6 +48,10 @@
     .date
       text-transform: uppercase
       font-size: .8rem
+
+    .main-section-content
+      width: 75%
+      margin: 0 auto
 
 .article
   margin-bottom: 1.5rem
