--- a/app/views/pages/press.html.haml
+++ b/app/views/pages/press.html.haml
@@ -3,8 +3,9 @@
 		%h1 Press & Awards
 		%ul.public-subnav= render "subnav"
 	.main-section
-		.title.bold Awards
-		%ul= render "awards"
-		%br
-		.title.bold Press
-		%ul= render "articles"
+		.main-section-content
+			.title.bold Awards
+			%ul= render "awards"
+			%br
+			.title.bold Press
+			%ul= render "articles"
