added H2s to public pages for better accessibility and structure for SEO

--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -13,7 +13,7 @@
       color: $color-white
       text-align: center
       font-size: 2.5rem
-      padding: 2em 0
+      padding: 1.5em 0 2em 0
 
     .public-subnav 
       position: absolute
@@ -68,8 +68,7 @@
 
 .role-title
   text-transform: uppercase
-  font-size: 1.2rem
-  margin-bottom: .5rem
+  margin: 1em 0
 
 .logged-out .page .hero-section, .logged-out .features .hero-section
   margin: 2.5rem 0 0
