--- a/app/views/pages/press.html.haml
+++ b/app/views/pages/press.html.haml
@@ -4,8 +4,8 @@
 		%ul.public-subnav= render "subnav"
 	.main-section
 		.main-section-content
-			.title.bold Awards
+			%h2.title.bold Awards
 			%ul= render "awards"
 			%br
-			.title.bold Press
+			%h2.title.bold Press
 			%ul= render "articles"
