revised styling of h2s on mobile for consistency on public pages

--- a/app/assets/stylesheets/_features.sass
+++ b/app/assets/stylesheets/_features.sass
@@ -135,8 +135,6 @@
 
   .features
     .feature-section
-      h2
-        line-height: 2.5rem
 
       img
         margin-top: 1%
@@ -164,6 +162,10 @@
       height: auto !important
       display: block
       padding: 1em
+
+      h2
+        font-size: 1.25rem
+        margin-bottom: .5rem
 
       .image-container
         margin: 1rem auto !important
