--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -98,3 +98,6 @@
       padding: 1.25rem
       .main-section-content
         width: 100%
+        h2
+          font-size: 1.25rem
+          margin-bottom: .5rem
